Subtitle Export: Subtitles are not sorted by time #46368

Closed
opened 2015-10-04 14:37:14 +02:00 by Leon Eckardt · 5 comments

System Information
Linux Ubuntu 14.04.3 LTS 64Bit, Mesa DRI Intel(R) Sandybridge Mobile

Blender Version
Broken: 2.76.0 fb78f6d,

Short description of error
Subtitle Export are not sorted by time, so eg. the vlc Player skipps the following unsorted subtitle entries

Exact steps for others to reproduce the error
Add some Txt stips to the VSE.
resort them
export subtitles

  • The Subtitles are exported in creation order not in time (frame) order

**System Information** Linux Ubuntu 14.04.3 LTS 64Bit, Mesa DRI Intel(R) Sandybridge Mobile **Blender Version** Broken: 2.76.0 fb78f6d, **Short description of error** Subtitle Export are not sorted by time, so eg. the vlc Player skipps the following unsorted subtitle entries **Exact steps for others to reproduce the error** Add some Txt stips to the VSE. resort them export subtitles - > The Subtitles are exported in creation order not in time (frame) order
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Leon95

Added subscriber: @Leon95
Author

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi
Bastien Montagne self-assigned this 2015-10-04 15:56:14 +02:00

This issue was referenced by f2499b6015

This issue was referenced by f2499b601514755819c2db4876b8ec677b45285e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46368
No description provided.