Fix T46368: Subtitle Export: Subtitles are not sorted by time.

We need a temp list of Text effect strips here, to be able to sort it as we want...