source/blender/editors/space_sequencer/sequencer_edit.c
@@ -3859,7 +3859,9 @@ static int sequencer_export_subtitles_exec(bContext *C, wmOperator *op)
 {
 	Scene *scene = CTX_data_scene(C);
 	Sequence *seq = BKE_sequencer_active_get(scene);
+	Sequence *seq_next;
 	Editing *ed = BKE_sequencer_editing_get(scene, false);
+	ListBase text_seq = {0};
 	int iter = 0;
 	FILE *file;
 	char filepath[FILE_MAX];
@@ -3885,25 +3887,39 @@ static int sequencer_export_subtitles_exec(bContext *C, wmOperator *op)
 		return OPERATOR_CANCELLED;
 	}
 
-	/* time to open and write! */
-	file = BLI_fopen(filepath, "w");
-
 	SEQ_BEGIN(ed, seq)
 	{
 		if (seq->type == SEQ_TYPE_TEXT) {
-			TextVars *data = seq->effectdata;
-			char timecode_str_start[32];
-			char timecode_str_end[32];
-
-			BLI_timecode_string_from_time(timecode_str_start, sizeof(timecode_str_start),
-			                              -2, FRA2TIME(seq->startdisp), FPS, USER_TIMECODE_SUBRIP);
-			BLI_timecode_string_from_time(timecode_str_end, sizeof(timecode_str_end),
-			                              -2, FRA2TIME(seq->enddisp), FPS, USER_TIMECODE_SUBRIP);
-
-			fprintf(file, "%d\n%s --> %s\n%s\n\n", iter++, timecode_str_start, timecode_str_end, data->text);
+			BLI_addtail(&text_seq, MEM_dupallocN(seq));
 		}
 	}
 	SEQ_END
+
+	if (BLI_listbase_is_empty(&text_seq)) {
+		BKE_report(op->reports, RPT_ERROR, "No subtitles (text strips) to export");
+		return OPERATOR_CANCELLED;
+	}
+
+	BLI_listbase_sort(&text_seq, BKE_sequencer_cmp_time_startdisp);
+
+	/* time to open and write! */
+	file = BLI_fopen(filepath, "w");
+
+	for (seq = text_seq.first; seq; seq = seq_next) {
+		TextVars *data = seq->effectdata;
+		char timecode_str_start[32];
+		char timecode_str_end[32];
+
+		BLI_timecode_string_from_time(timecode_str_start, sizeof(timecode_str_start),
+									  -2, FRA2TIME(seq->startdisp), FPS, USER_TIMECODE_SUBRIP);
+		BLI_timecode_string_from_time(timecode_str_end, sizeof(timecode_str_end),
+									  -2, FRA2TIME(seq->enddisp), FPS, USER_TIMECODE_SUBRIP);
+
+		fprintf(file, "%d\n%s --> %s\n%s\n\n", iter++, timecode_str_start, timecode_str_end, data->text);
+
+		seq_next = seq->next;
+		MEM_freeN(seq);
+	}
 
 	fclose(file);
 
